<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="376dp"
        android:gravity="center_vertical"
        android:text="@string/login_header"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/purple_200"
        android:textSize="40sp"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/username_field_placeholder" />

    <EditText
        android:id="@+id/usernameTxtBx"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="0dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/password_field_placeholder" />

    <EditText
        android:id="@+id/passwordTxtBx"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:ems="10"
        android:inputType="textPassword" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical">

        <Button
            android:id="@+id/loginBtn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:width="150dp"
            android:height="75dp"
            android:background="#2E7D32"
            android:backgroundTint="#76B648"
            android:text="@string/login_button_label"
            android:textSize="18sp" />

        <Button
            android:id="@+id/exitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:width="150dp"
            android:height="75dp"
            android:background="#C62828"
            android:backgroundTint="#FDF65252"
            android:text="@string/exit_button_label"
            android:textSize="18sp" />
    </TableRow>

</LinearLayout>