<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="332dp"
        android:layout_marginBottom="20dp"
        android:background="#FFFFFF"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/kana_img"
        tools:srcCompat="@drawable/kana_img" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_label"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="not logged in"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/short_message"
        android:textAlignment="center" />

    <Button
        android:id="@+id/closeBtn"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="#FDF65252"
        android:text="@string/close_button"
        android:textSize="18sp" />
</LinearLayout>